--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
   formz: ^0.7.0
   flutter_localizations:
     sdk: flutter
-  google_fonts: ^6.2.1
+  flutter_cache_manager: ^3.4.1
+  animated_custom_dropdown: ^3.1.1
 
 dev_dependencies:
   flutter_test:
