--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   animated_custom_dropdown: ^3.1.1
   persistent_bottom_nav_bar: ^6.2.1
   syncfusion_flutter_calendar: ^20.2.44
+  google_maps_flutter: ^2.6.1
 
 dev_dependencies:
   flutter_test:
