--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   syncfusion_flutter_calendar: ^20.2.44
   google_maps_flutter: ^2.6.1
-  intl: ^0.18.1
+  intl: ^0.19.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
